--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,7 +107,7 @@ main nav {
     border-radius: 8px;
     background: rgba(39, 39, 39, 0.05);
     margin: 0 270px 70px;
-   
+
 }
 
 .title-2 {
@@ -126,4 +126,20 @@ main nav {
     padding: 105px 500px 100px;
     border-radius: 8px;
     background: rgba(229, 84, 115, 0.05);
+    margin-bottom: 50px;
 }
+
+.section4 {
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+.group-images {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 260px 90px;
+}
+    
